 # [#23525] Access to media manager & ACL

29-Nov-2010 Jean-Marie Simonet
 # [#23340] sort order Extension Manager: Manage (filter). Thanks Klas and Christophe.
 # [#23555] Duplicate alias error in home page removes home page of the site. Thanks Mark
 # [#23376] Confirm password reset fails with invalid token. Thanks Ian.
 $ Missing lines in en-GB.xml and xx-XX.xml, missing ini files in xx-XX.
 
28-Nov-2010 Jean-Marie Simonet
 # [#22623] stressed titles / utf8 characters don't make it through the return parameter. Thanks Christophe.

28-Nov-2010 Mark Dexter
# [#23501] Custom groups assignment not being honoured in user edit form.
# [#23419] group with create in a single category only (e.g. customer group) user getting 403 errors

27-Nov-2010 Ian MacLennan
 # [#23513] Incorrect PHP function referenced in date()'s phpdoc for second parameter

27-Nov-2010 Mark Dexter
# [#23524] JUser has incorrect static variable $isRoot

27-Nov-2010 Jean-Marie Simonet
 $ Moving a string to library ini.
 
27-Nov-2010 Christophe Demko
 # [#23523] Add Hathor override for the new My Profile view (Andrea Tarr)
 # [#23526] mod_login module does not display correct URL while redirecting
 $ Typos in behavior.php

26-Nov-2010 Jean-Marie Simonet
 $ [#23449] confusing language in acl tootltip for categories and content
 # [#23476] code editor textarea missing border. Thanks Andrea.

26-Nov-2010 Andrew Eddie
 # Fixed issue [#23495] ACL for Image Manager access to the uploader (Elin Waring, Christophe Demko).

25-Nov-2010 Jean-Marie Simonet
 # Hiding and correcting related to [#23117]
 # [#23505] SEF off url inconsistencies in category routes. Thanks Andrew.
 
25-Nov-2010 Christophe Demko
 # [#23462] Checkboxes Form Field is not displayed correctly Options panel (Andrea Tarr)
 # [#23460] com_plugins uses wrong JPATH constants (Ian MacLennan)
 # [#23461] Wrong JPATH constant use in JHtmlEditor (Ian MacLennan)
 # [#23465] Incorrect group attribute set for content search plugin (CY Lee)