@@ -38,6 +38,8 @@ $ -> Language fix or change
  # [#23555] Duplicate alias error in home page removes home page of the site. Thanks Mark
  # [#23376] Confirm password reset fails with invalid token. Thanks Ian.
  $ Missing lines in en-GB.xml and xx-XX.xml, missing ini files in xx-XX.
+ # [#23539] Administrator custom module causes fatal error when used with com_content. Thanks Ian.
+
  
 28-Nov-2010 Jean-Marie Simonet
  # [#22623] stressed titles / utf8 characters don't make it through the return parameter. Thanks Christophe.
